Now fixed header without gap

--- a/css/about.css
+++ b/css/about.css
@@ -20,9 +20,9 @@ body{
 }
 
 h1 {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  font-size: 20px;
+  padding-top: 20vh;
+  font-family: Papyrus; fantasy;
+  font-size: 3rem;
 }
 
 footer {
@@ -46,6 +46,7 @@ a:hover {
 }
 
 .header {
+  position: fixed;
   width:100%;
   background-color: black;
   border-bottom: 4px solid white;
@@ -72,11 +73,6 @@ input {
   font-style: normal;
 }
 
-h1 {
-  padding: 20px;
-  font-family: Papyrus; fantasy;
-  font-size: 3rem;
-}
 .blurb {
   font-size: 20px;
   margin-left: 20%;
